--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,67 @@
+[DEFAULT]
+GravitationalConstant=0.5
+WindowWidth=1920
+WindowHeight=1080
+StartPosX=960
+StartPosY=540
+StartAngle1=1.570796
+ArmLength1=250
+BobMass1=20
+StartAngle2=1.570796
+ArmLength2=250
+BobMass2=20
+LineTracing=false
+TraceCircleRadius=3
+TraceColorRed=255
+TraceColorGreen=0
+TraceColorBlue=255
+TraceColorAlpha=255
+
+; Simulation constants
+; GravitationalConstant -> Value of the universal gravitational constant (don't use real value, numbers between 0.25 and 1.0 work best, larger = faster / smaller = slower, negative = upside down)
+[Simulation]
+GravitationalConstant=0.5
+
+; Options for initial size of render window and placement of double pendulum
+; WindowWidth -> Initial width, in pixels, of render window
+; WindowHeight -> Initial height, in pixels, of render window
+; StartPosX -> Initial x-position, in pixels, of pendulum stem w/in window
+; StartPosY -> Initial y-position, in pixels, of pendulum stem w/in window
 [Size and Position]
+WindowWidth=1920
+WindowHeight=1080
+StartPosX=960
+StartPosY=540
 
-
+; Options for initial conditions of pendulum 1 (top)
+; StartAngle -> Initial angle, in radians (0 = vertical downwards, counter-clockwise is positive, and you can use constants from cmath library like M_PI, M_PI_2, or M_PI_4)
+; ArmLength -> Length, in pixels, of pendulum arm
+; BobMass -> Mass of bob on end of pendulum (determines radius of visualization)
 [Initial Conditions Pendulum 1]
+StartAngle1=1.570796
+ArmLength1=250
+BobMass1=20
 
-
+; Options for initial conditions of pendulum 2 (bottom)
+; StartAngle -> Initial angle, in radians (0 = vertical downwards, counter-clockwise is positive, and you can use constants from cmath library like M_PI, M_PI_2, or M_PI_4)
+; ArmLength -> Length, in pixels, of pendulum arm
+; BobMass -> Mass of bob on end of pendulum (determines radius of visualization)
 [Initial Conditions Pendulum 2]
+StartAngle2=1.570796
+ArmLength2=250
+BobMass2=20
 
-
+; Options to control path tracing of pendulum 2's bob
+; LineTracing -> Type of tracing to draw (circles or lines)
+; TraceColorRed -> Red value [0, 255] for custom path color
+; TraceColorGreen -> Green value [0, 255] for custom path color
+; TraceColorBlue -> Blue value [0, 255] for custom path color
+; TraceColorAlpha -> Alpha value [0, 255] for custom path color
+; TraceCircleRadius -> Radius, in pixels, of path circles
 [Path Tracing]
-TraceType=lines
-TraceColorName=Cyan
+LineTracing=false
+TraceCircleRadius=3
+TraceColorRed=255
+TraceColorGreen=0
+TraceColorBlue=255
+TraceColorAlpha=255
