add configurable anti-aliasing, add dynamic window resizing, add configurable circle point counts

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,10 @@
+; Rendering options
+; AntiAliasing -> Level of anti-aliasing to apply globally to the rendered image (powers of 2, <= 16, lower to improve performance)
+; CirclePointCount -> Number of sides used to create all circles (anything above ~20 will usually look smooth, lower to improve performance)
+[Rendering]
+AntiAliasing=16
+CirclePointCount=100
+
 ; Simulation constants
 ; GravitationalConstant -> Value of the universal gravitational constant (don't use real value, numbers between 0.25 and 1.0 work best, larger = faster / smaller = slower, negative = upside down)
 [Simulation]
@@ -19,18 +26,18 @@ StartPosY=720
 ; ArmLength -> Length, in pixels, of pendulum arm
 ; BobMass -> Mass of bob on end of pendulum (determines radius of visualization)
 [Initial Conditions Pendulum 1]
-StartAngle1=1.570796
-ArmLength1=345
-BobMass1=25
+StartAngle=1.570796
+ArmLength=345
+BobMass=25
 
 ; Options for initial conditions of pendulum 2 (bottom)
 ; StartAngle -> Initial angle, in radians (0 = vertical downwards, counter-clockwise is positive, and you can use constants from cmath library like M_PI, M_PI_2, or M_PI_4)
 ; ArmLength -> Length, in pixels, of pendulum arm
 ; BobMass -> Mass of bob on end of pendulum (determines radius of visualization)
 [Initial Conditions Pendulum 2]
-StartAngle2=1.570796
-ArmLength2=345
-BobMass2=25
+StartAngle=1.570796
+ArmLength=345
+BobMass=25
 
 ; Options to control path tracing of pendulum 2's bob
 ; LineTracing -> Type of tracing to draw (circles or lines)
@@ -48,17 +55,16 @@ TraceColorBlue=50
 TraceColorAlpha=255
 
 [DEFAULT]
+AntiAliasing=16
+CirclePointCount=100
 GravitationalConstant=0.5
 WindowWidth=1920
 WindowHeight=1080
 StartPosX=960
 StartPosY=540
-StartAngle1=1.570796
-ArmLength1=250
+StartAngle=1.570796
+ArmLength=250
 BobMass1=20
-StartAngle2=1.570796
-ArmLength2=250
-BobMass2=20
 LineTracing=false
 TraceCircleRadius=3
 TraceColorRed=255
