--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,18 @@
 ; Rendering options
 ; AntiAliasing -> Level of anti-aliasing to apply globally to the rendered image (powers of 2, <= 16, lower to improve performance)
 ; CirclePointCount -> Number of sides used to create all circles (anything above ~20 will usually look smooth, lower to improve performance)
+; VSync -> Turns VSync on or off (behavior will depend on your graphics driver settings)
+; FramerateLimit -> Limits the framerate to some upper bound (shouldn't need to use w/ V-Sync enabled)
 [Rendering]
 AntiAliasing=16
 CirclePointCount=100
+VSync=true
+FramerateLimit=117
 
 ; Simulation constants
-; GravitationalConstant -> Value of the universal gravitational constant (don't use real value, numbers between 0.25 and 1.0 work best, larger = faster / smaller = slower, negative = upside down)
+; GravitationalConstant -> Value of the universal gravitational constant (don't use real value, keep inverse ratio of G=1 : FramerateLimit=60 for natural-looking motion, larger = faster / smaller = slower, negative = upside down)
 [Simulation]
-GravitationalConstant=0.5
+GravitationalConstant=0.5128205128205
 
 ; Options for initial size of render window and placement of double pendulum
 ; WindowWidth -> Initial width, in pixels, of render window
@@ -23,8 +27,8 @@ StartPosY=720
 
 ; Options for initial conditions of pendulum 1 (top)
 ; StartAngle -> Initial angle, in radians (0 = vertical downwards, counter-clockwise is positive, and you can use constants from cmath library like M_PI, M_PI_2, or M_PI_4)
-; ArmLength -> Length, in pixels, of pendulum arm
-; BobMass -> Mass of bob on end of pendulum (determines radius of visualization)
+; ArmLength -> Length, in pixels, of pendulum arm (units don't matter only magnitude relative to other values)
+; BobMass -> Mass of bob on end of pendulum (units don't matter only magnitude relative to other values, determines radius of visualization)
 [Initial Conditions Pendulum 1]
 StartAngle=1.570796
 ArmLength=345
@@ -32,8 +36,8 @@ BobMass=25
 
 ; Options for initial conditions of pendulum 2 (bottom)
 ; StartAngle -> Initial angle, in radians (0 = vertical downwards, counter-clockwise is positive, and you can use constants from cmath library like M_PI, M_PI_2, or M_PI_4)
-; ArmLength -> Length, in pixels, of pendulum arm
-; BobMass -> Mass of bob on end of pendulum (determines radius of visualization)
+; ArmLength -> Length, in pixels, of pendulum arm (units don't matter only magnitude relative to other values)
+; BobMass -> Mass of bob on end of pendulum (units don't matter only magnitude relative to other values, determines radius of visualization)
 [Initial Conditions Pendulum 2]
 StartAngle=1.570796
 ArmLength=345
@@ -57,7 +61,9 @@ TraceColorAlpha=255
 [DEFAULT]
 AntiAliasing=16
 CirclePointCount=100
-GravitationalConstant=0.5
+VSync=true
+FramerateLimit=60
+GravitationalConstant=1
 WindowWidth=1920
 WindowHeight=1080
 StartPosX=960
