--- a/config.ini
+++ b/config.ini
@@ -47,9 +47,9 @@ StartPosY=720
 ;                        ~ units don't matter, only relative to other values
 ;                        ~ determines radius of visualization
 [Initial Conditions Pendulum 1]
-StartAngle1=1.570796
-ArmLength1=345
-BobMass1=25
+StartAngle=1.570796
+ArmLength=345
+BobMass=25
 
 ; Options for initial conditions of pendulum 2 (bottom)
 ; StartAngle            -> Initial angle, in radians
@@ -61,9 +61,9 @@ BobMass1=25
 ;                        ~ units don't matter, only relative to other values
 ;                        ~ determines radius of visualization
 [Initial Conditions Pendulum 2]
-StartAngle2=1.570796
-ArmLength2=345
-BobMass2=25
+StartAngle=1.570796
+ArmLength=345
+BobMass=25
 
 ; Options to control path tracing of pendulum 2's bob
 ; LineTracing           -> Type of tracing to draw (circles or lines)
@@ -74,7 +74,28 @@ BobMass2=25
 ; TraceCircleRadius     -> Radius, in pixels, of path circles
 [Path Tracing]
 LineTracing=false
-TraceCircleRadius=4
+TraceCircleRadius=3
+TraceColorRed=255
+TraceColorGreen=0
+TraceColorBlue=255
+TraceColorAlpha=255
+
+; Default values
+[DEFAULT]
+AntiAliasing=16
+CirclePointCount=100
+VSync=true
+FramerateLimit=60
+GravitationalConstant=1
+WindowWidth=1920
+WindowHeight=1080
+StartPosX=960
+StartPosY=540
+StartAngle=1.570796
+ArmLength=250
+BobMass=20
+LineTracing=false
+TraceCircleRadius=3
 TraceColorRed=255
 TraceColorGreen=0
 TraceColorBlue=255
